--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,3 @@
-<!-- ======================================================================= -->
-<!-- FILE: public/index.html (Main App)                                      -->
-<!-- ======================================================================= -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -174,11 +171,17 @@
             listenToActiveProjects();
         }
         
-        document.getElementById('showSummaryBtn').addEventListener('click', () => showMainView('summaryView'));
-        document.getElementById('showProjectManagementBtn').addEventListener('click', () => showMainView('projectManagementView'));
+        document.getElementById('showSummaryBtn').addEventListener('click', () => {
+            showMainView('summaryView');
+            listenToTimestamps(); // Load data when view is shown
+        });
+        document.getElementById('showProjectManagementBtn').addEventListener('click', () => {
+             showMainView('projectManagementView');
+             listenToAllProjects(); // Load data when view is shown
+        });
         document.querySelectorAll('.btn-back').forEach(btn => btn.addEventListener('click', showClockInView));
 
-        // --- Clock-in/out Logic (Copied from previous version) ---
+        // --- Clock-in/out Logic ---
         function updateClock() { document.getElementById('realtime-clock').textContent = new Date().toLocaleTimeString('ja-JP'); }
         setInterval(updateClock, 1000);
         document.getElementById('clockInBtn').addEventListener('click', () => handleTimestamp('出勤'));
@@ -227,7 +230,7 @@
             });
         }
         
-        // --- Project Loading (Copied from previous version) ---
+        // --- Project Loading ---
         function listenToActiveProjects() {
             const q = query(collection(db, "projects"), where("status", "==", "Active"));
             if (projectsUnsubscribe) projectsUnsubscribe();
@@ -251,12 +254,173 @@
             select.value = currentValue;
         }
 
-        // --- Summary/Project Management Logic (Needs to be adapted from SPA version) ---
-        // NOTE: The logic for summary and project management is extensive and would be
-        // included here, following the same patterns as the original SPA but adapted
-        // for this multi-view-in-one-page structure. For brevity, the full code
-        // for these sections is omitted but would be a direct port of the logic.
-        // The event listeners for showing these views are already set up above.
+        // --- Summary Dashboard Logic ---
+        function listenToTimestamps() {
+            const summaryStatus = document.getElementById('summaryStatus');
+            summaryStatus.textContent = 'データを読み込んでいます...';
+            const q = query(collection(db, "timestamps"), where("userId", "==", currentUser.uid), orderBy("clockInTime", "desc"));
+            if (timestampsUnsubscribe) timestampsUnsubscribe();
+            timestampsUnsubscribe = onSnapshot(q, (snapshot) => {
+                const records = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+                initializeDashboard(records);
+                summaryStatus.textContent = '';
+            }, (error) => {
+                summaryStatus.textContent = `エラー: ${error.message}`;
+                console.error(error);
+            });
+        }
+        function initializeDashboard(records) {
+            const monthlyData = {};
+            const projectDetails = {};
+            records.forEach(record => {
+                if (!record.clockInTime) return;
+                const clockInTime = record.clockInTime.toDate();
+                const yearMonth = `${clockInTime.getFullYear()}-${(clockInTime.getMonth() + 1).toString().padStart(2, '0')}`;
+                const projectCode = record.projectCode || '未指定';
+                const duration = record.durationHours || 0;
+                if (!projectDetails[projectCode]) {
+                    projectDetails[projectCode] = { name: record.projectName, color: record.projectColor || null };
+                }
+                if (!monthlyData[yearMonth]) monthlyData[yearMonth] = {};
+                if (!monthlyData[yearMonth][projectCode]) {
+                    monthlyData[yearMonth][projectCode] = { projectName: record.projectName, total: 0, details: [] };
+                }
+                monthlyData[yearMonth][projectCode].total += duration;
+                if(record.durationHours) {
+                    monthlyData[yearMonth][projectCode].details.push({
+                        recordId: record.id,
+                        date: clockInTime.toLocaleDateString('ja-JP'),
+                        clockIn: clockInTime.toLocaleString('ja-JP'),
+                        clockOut: record.clockOutTime ? record.clockOutTime.toDate().toLocaleString('ja-JP') : 'N/A',
+                        duration: duration.toFixed(2)
+                    });
+                }
+            });
+            fullDashboardData = monthlyData;
+            const allMonths = Object.keys(monthlyData).sort();
+            const allProjects = [...new Set(Object.values(monthlyData).flatMap(month => Object.keys(month)))];
+            const datasets = allProjects.map(projectCode => {
+                const projectInfo = projectDetails[projectCode] || {};
+                const color = projectInfo.color || `rgba(${Math.floor(Math.random()*255)}, ${Math.floor(Math.random()*255)}, ${Math.floor(Math.random()*255)}, 0.8)`;
+                const dataPoints = allMonths.map(month => monthlyData[month][projectCode]?.total || 0);
+                return { label: `${projectInfo.name || projectCode}`, data: dataPoints, borderColor: color, backgroundColor: color, fill: false, };
+            });
+            const graphData = { labels: allMonths, datasets };
+            renderChart(graphData);
+            const availableMonths = Object.keys(fullDashboardData).sort().reverse();
+            document.getElementById('monthSelector').innerHTML = availableMonths.map(month => `<option value="${month}">${month}</option>`).join('');
+            if (availableMonths.length > 0) {
+                renderMonthData(availableMonths[0]);
+            } else {
+                document.getElementById('detailsContainer').innerHTML = '<p class="text-center text-gray-500 py-4">表示できるデータがありません。</p>';
+            }
+        }
+        function renderChart(graphData) {
+            if (monthlyChartInstance) monthlyChartInstance.destroy();
+            const ctx = document.getElementById('monthlyChart').getContext('2d');
+            monthlyChartInstance = new Chart(ctx, { type: 'line', data: graphData, options: { responsive: true, scales: { y: { beginAtZero: true, ticks: { callback: value => value + 'h' } } } } });
+        }
+        document.getElementById('monthSelector').addEventListener('change', (e) => renderMonthData(e.target.value));
+        function renderMonthData(month) {
+            const dataForMonth = fullDashboardData[month] || {};
+            const projects = Object.keys(dataForMonth);
+            const tabsContainer = document.getElementById('projectTabs');
+            const contentContainer = document.getElementById('projectTabContent');
+            if (projects.length === 0) {
+                tabsContainer.innerHTML = '';
+                contentContainer.innerHTML = '<p class="text-center text-gray-500 py-4">この月には記録がありません。</p>';
+                return;
+            }
+            tabsContainer.innerHTML = `<nav class="-mb-px flex space-x-4 overflow-x-auto">${projects.map((p, i) => `<button data-project="${p}" class="tab-btn whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm ${i===0 ? 'active' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300'}">${dataForMonth[p].projectName}</button>`).join('')}</nav>`;
+            contentContainer.innerHTML = projects.map((p, i) => {
+                const projectData = dataForMonth[p];
+                const totalHours = projectData.total.toFixed(2);
+                let detailsHtml = `<div class="overflow-x-auto"><table class="min-w-full divide-y divide-gray-200"><thead><tr><th class="px-4 py-2 text-left text-xs font-medium text-gray-500">出勤</th><th class="px-4 py-2 text-left text-xs font-medium text-gray-500">退勤</th><th class="px-4 py-2 text-right text-xs font-medium text-gray-500">時間(h)</th></tr></thead><tbody>
+                                ${projectData.details.sort((a, b) => new Date(a.clockIn) - new Date(b.clockIn)).map(d => `<tr><td class="px-4 py-2 text-sm">${d.clockIn}</td><td class="px-4 py-2 text-sm">${d.clockOut}</td><td class="px-4 py-2 text-sm text-right">${d.duration}</td></tr>`).join('')}
+                            </tbody></table></div>`;
+                return `<div data-content="${p}" class="${i===0 ? '' : 'hidden'}"><div class="flex flex-col sm:flex-row justify-between items-center p-4 bg-indigo-50 rounded-lg gap-4"><h3 class="text-lg font-bold">合計時間: <span class="text-indigo-600">${totalHours}</span> 時間</h3><button data-month="${month}" data-project="${p}" class="download-pdf-btn btn w-full sm:w-auto text-white bg-indigo-600 hover:bg-indigo-700 px-4 py-2 rounded-lg">PDF出力</button></div><div class="mt-4">${detailsHtml}</div></div>`;
+            }).join('');
+            tabsContainer.querySelectorAll('.tab-btn').forEach(btn => btn.addEventListener('click', () => {
+                const targetProject = btn.dataset.project;
+                tabsContainer.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.dataset.project === targetProject));
+                contentContainer.querySelectorAll('[data-content]').forEach(c => c.classList.toggle('hidden', c.dataset.content !== targetProject));
+            }));
+            contentContainer.querySelectorAll('.download-pdf-btn').forEach(btn => btn.addEventListener('click', (e) => downloadPdf(e.target.dataset.month, e.target.dataset.project)));
+        }
+        function downloadPdf(month, projectCode) {
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
+            const projectData = fullDashboardData[month]?.[projectCode];
+            if (!projectData) { alert("PDF生成用のデータが見つかりません。"); return; }
+            doc.addFileToVFS("Amiri-Regular.ttf", amiriFont);
+            doc.addFont("Amiri-Regular.ttf", "Amiri", "normal");
+            doc.setFont("Amiri");
+            doc.setFontSize(18);
+            doc.text(`${month} 稼働時間報告書`, 14, 22);
+            doc.setFontSize(14);
+            doc.text(`${projectData.projectName} (${projectCode})`, 14, 32);
+            doc.setFontSize(12);
+            doc.text(`合計時間: ${projectData.total.toFixed(2)} 時間`, 14, 42);
+            const tableColumn = ["日付", "出勤", "退勤", "時間(h)"];
+            const tableRows = [];
+            projectData.details.sort((a, b) => new Date(a.clockIn) - new Date(b.clockIn)).forEach(detail => {
+                const ticketData = [ detail.date.split(' ')[0], (detail.clockIn || "").split(' ')[1] || "", (detail.clockOut || "").split(' ')[1] || "", detail.duration ];
+                tableRows.push(ticketData);
+            });
+            doc.autoTable({ head: [tableColumn], body: tableRows, startY: 50, styles: { font: "Amiri", fontStyle: 'normal' }, headStyles: { fillColor: [79, 70, 229] } });
+            doc.save(`稼働報告書_${month}_${projectCode}.pdf`);
+        }
+
+        // --- Project Management Logic ---
+        function listenToAllProjects() {
+            const q = query(collection(db, "projects"), orderBy("code"));
+            if (projectsUnsubscribe) projectsUnsubscribe();
+            projectsUnsubscribe = onSnapshot(q, (snapshot) => {
+                const projects = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+                renderProjectList(projects);
+            }, (error) => { console.error("Error fetching all projects: ", error); document.getElementById('projectManagementStatus').textContent = "プロジェクトリストの取得に失敗しました。"; });
+        }
+        function renderProjectList(projects) {
+            const container = document.getElementById('projectListContainer');
+            if (!projects || projects.length === 0) { container.innerHTML = '<p class="text-center text-gray-500">プロジェクトがありません。</p>'; return; }
+            container.innerHTML = projects.map(p => `<div class="flex justify-between items-center p-2 border-b gap-4"><input type="color" class="p-1 h-10 w-10 block bg-white border border-gray-200 cursor-pointer rounded-lg" value="${p.color || '#808080'}" data-project-id="${p.id}"><div class="flex-grow"><p class="font-bold">${p.name}</p><p class="text-sm text-gray-500">${p.code}</p></div><label class="switch"><input type="checkbox" data-project-id="${p.id}" ${p.status === 'Active' ? 'checked' : ''}><span class="slider"></span></label></div>`).join('');
+            container.querySelectorAll('input').forEach(input => input.addEventListener('change', handleProjectUpdate));
+        }
+        async function handleProjectUpdate(e) {
+            const target = e.target;
+            const projectId = target.dataset.projectId;
+            if (!projectId) return;
+            const statusElem = document.getElementById('projectManagementStatus');
+            const docRef = doc(db, "projects", projectId);
+            try {
+                if (target.type === 'checkbox') {
+                    statusElem.textContent = "ステータスを更新しています...";
+                    await updateDoc(docRef, { status: target.checked ? 'Active' : 'Inactive' });
+                    statusElem.textContent = "ステータスを更新しました。";
+                } else if (target.type === 'color') {
+                    statusElem.textContent = "色を更新しています...";
+                    await updateDoc(docRef, { color: target.value });
+                    statusElem.textContent = "色を更新しました。";
+                }
+            } catch (error) { statusElem.textContent = `更新エラー: ${error.message}`; }
+        }
+        document.getElementById('addProjectBtn').addEventListener('click', async () => {
+            const codeInput = document.getElementById('newProjectCode');
+            const nameInput = document.getElementById('newProjectName');
+            const code = codeInput.value.trim();
+            const name = nameInput.value.trim();
+            const statusElem = document.getElementById('projectManagementStatus');
+            if (!code || !name) { statusElem.textContent = "エラー: コードと名前は必須です。"; return; }
+            statusElem.textContent = "追加しています...";
+            try {
+                const q = query(collection(db, "projects"), where("code", "==", code));
+                const querySnapshot = await getDocs(q);
+                if (!querySnapshot.empty) { throw new Error("同じプロジェクトコードが既に存在します。"); }
+                await addDoc(collection(db, "projects"), { code: code, name: name, status: "Active", color: "#808080", ownerId: currentUser.uid });
+                statusElem.textContent = "プロジェクトを追加しました。";
+                codeInput.value = ''; nameInput.value = '';
+            } catch (error) { statusElem.textContent = `追加エラー: ${error.message}`; }
+        });
 
     </script>
 </body>
