--- a/public/profile.html
+++ b/public/profile.html
@@ -1,6 +1,3 @@
-<!-- ======================================================================= -->
-<!-- FILE: public/profile.html                                               -->
-<!-- ======================================================================= -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -31,7 +28,7 @@
                 <input type="text" id="profileDisplayName" placeholder="ディスプレイ名" class="w-full px-4 py-3 bg-gray-50 border rounded-lg">
                 <input type="email" id="profileEmail" placeholder="メールアドレス" class="w-full px-4 py-3 bg-gray-200 border rounded-lg" readonly>
                 <div>
-                    <label class="block text-sm font-medium text-gray-700">アイコン画像</label>
+                    <label class="block text-sm font-medium text-gray-700">アイコン画像 (任意)</label>
                     <div class="mt-1 flex items-center space-x-4">
                         <img id="profileIconPreview" src="https://placehold.co/96x96/EFEFEF/333333?text=Icon" class="w-24 h-24 rounded-full object-cover bg-gray-200">
                         <input type="file" id="profileIconFile" accept="image/*" class="block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-violet-50 file:text-violet-700 hover:file:bg-violet-100">
@@ -113,8 +110,16 @@
             const displayName = document.getElementById('profileDisplayName').value.trim();
             const iconFile = document.getElementById('profileIconFile').files[0];
             const statusDiv = document.getElementById('profile-status');
+            
+            // Add validation for required fields
+            if (!lastName || !firstName || !displayName) {
+                statusDiv.textContent = '姓、名、ディスプレイ名は必須項目です。';
+                statusDiv.style.color = 'red';
+                return;
+            }
 
             statusDiv.textContent = '更新中...';
+            statusDiv.style.color = 'black'; // Reset color
 
             try {
                 let photoURL = currentUser.photoURL; // 現在のURLを保持
