--- a/public/signup.html
+++ b/public/signup.html
@@ -1,6 +1,3 @@
-<!-- ======================================================================= -->
-<!-- FILE: public/signup.html                                                -->
-<!-- ======================================================================= -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -29,7 +26,7 @@
                 <input type="email" id="signupEmail" placeholder="メールアドレス" class="w-full px-4 py-3 bg-gray-50 border rounded-lg">
                 <input type="password" id="signupPassword" placeholder="パスワード (6文字以上)" class="w-full px-4 py-3 bg-gray-50 border rounded-lg">
                 <div>
-                    <label class="block text-sm font-medium text-gray-700">アイコン画像</label>
+                    <label class="block text-sm font-medium text-gray-700">アイコン画像 (任意)</label>
                     <div class="mt-1 flex items-center space-x-4">
                         <img id="signupIconPreview" src="https://placehold.co/96x96/EFEFEF/333333?text=Icon" class="w-24 h-24 rounded-full object-cover bg-gray-200">
                         <input type="file" id="signupIconFile" accept="image/*" class="block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-violet-50 file:text-violet-700 hover:file:bg-violet-100">
