--- a/public/profile.html
+++ b/public/profile.html
@@ -43,7 +43,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
         import { getAuth, onAuthStateChanged, updateProfile } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-        import { getFirestore, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"; // updateDocをsetDocに変更
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
         const firebaseConfig = {
@@ -136,14 +136,14 @@
                     photoURL: photoURL
                 });
 
-                // 3. Firestoreドキュメントを更新
+                // 3. Firestoreドキュメントを更新（存在しない場合は作成）
                 const userDocRef = doc(db, "users", currentUser.uid);
-                await updateDoc(userDocRef, {
+                await setDoc(userDocRef, {
                     lastName: lastName,
                     firstName: firstName,
                     displayName: displayName,
                     photoURL: photoURL
-                });
+                }, { merge: true }); // merge:true を使うことで、ドキュメントがなくてもエラーにならず、新規作成される
 
                 statusDiv.textContent = 'プロフィールを更新しました！';
                 statusDiv.style.color = 'green';
