--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
+    <!-- Add Japanese font for jsPDF from a reliable CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-font-mplus-1p-normal/1.0.0/mplus-1p-normal.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -118,9 +120,6 @@
             getFirestore, collection, addDoc, getDocs, query, where, orderBy,
             limit, doc, updateDoc, serverTimestamp, onSnapshot
         } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
-        // This is a full, valid Base64-encoded Japanese font (IPAexGothic).
-        const FONT_DATA_URL = "AAEAAAARAQAABAAQRFNJRwAAAAAAA... (a very long, complete string will be here)";
 
         const firebaseConfig = {
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
@@ -374,10 +373,8 @@
             const projectData = fullDashboardData[month]?.[projectCode];
             if (!projectData) { alert("PDF生成用のデータが見つかりません。"); return; }
             
-            // Use the embedded font
-            doc.addFileToVFS("ipaexg.ttf", FONT_DATA_URL);
-            doc.addFont("ipaexg.ttf", "ipaexg", "normal");
-            doc.setFont("ipaexg");
+            // Set the font that was loaded from the CDN
+            doc.setFont("mplus-1p-regular");
             
             doc.setFontSize(18);
             doc.text(`${month} 稼働時間報告書`, 14, 22);
@@ -391,7 +388,16 @@
                 const ticketData = [ detail.date.split(' ')[0], (detail.clockIn || "").split(' ')[1] || "", (detail.clockOut || "").split(' ')[1] || "", detail.duration ];
                 tableRows.push(ticketData);
             });
-            doc.autoTable({ head: [tableColumn], body: tableRows, startY: 50, styles: { font: "ipaexg", fontStyle: 'normal' }, headStyles: { fillColor: [79, 70, 229] } });
+            doc.autoTable({ 
+                head: [tableColumn], 
+                body: tableRows, 
+                startY: 50, 
+                styles: { 
+                    font: "mplus-1p-regular", 
+                    fontStyle: 'normal' 
+                }, 
+                headStyles: { fillColor: [79, 70, 229] } 
+            });
             doc.save(`稼働報告書_${month}_${projectCode}.pdf`);
         }
 
@@ -448,4 +454,4 @@
 
     </script>
 </body>
-</ht
+</html>
