--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
-    <!-- The external font script is removed for a more reliable embedded approach -->
+    <!-- Add Japanese font for jsPDF from a reliable CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-font-mplus-1p-normal/1.0.0/mplus-1p-normal.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -119,9 +120,6 @@
             getFirestore, collection, addDoc, getDocs, query, where, orderBy,
             limit, doc, updateDoc, serverTimestamp, onSnapshot
         } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
-        // This is a full, valid Base64-encoded Japanese font (IPAexGothic).
-        const IPAEXG_FONT_B64 = "AAEAAAARAQAABAAQRFNJRwAAAA... (a very long, complete string will be here)";
 
         const firebaseConfig = {
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
@@ -375,10 +373,8 @@
             const projectData = fullDashboardData[month]?.[projectCode];
             if (!projectData) { alert("PDF生成用のデータが見つかりません。"); return; }
             
-            // Use the embedded font
-            doc.addFileToVFS("ipaexg.ttf", IPAEXG_FONT_B64);
-            doc.addFont("ipaexg.ttf", "ipaexg", "normal");
-            doc.setFont("ipaexg");
+            // Set the font that was loaded from the CDN
+            doc.setFont("mplus-1p-regular", "normal");
             
             doc.setFontSize(18);
             doc.text(`${month} 稼働時間報告書`, 14, 22);
@@ -397,7 +393,7 @@
                 body: tableRows, 
                 startY: 50, 
                 styles: { 
-                    font: "ipaexg", 
+                    font: "mplus-1p-regular", 
                     fontStyle: 'normal' 
                 }, 
                 headStyles: { fillColor: [79, 70, 229] } 
@@ -458,4 +454,4 @@
 
     </script>
 </body>
-</html>
+</ht
