--- a/public/login.html
+++ b/public/login.html
@@ -18,12 +18,15 @@
         <div class="p-8 space-y-6 bg-white rounded-2xl shadow-lg">
             <header>
                 <h1 class="text-3xl font-bold text-center text-gray-800">打刻システム</h1>
-                <p class="text-center text-gray-500 mt-2">ログインしてください</p>
+                <p class="text-center text-gray-500 mt-2">ログインまたは新規登録</p>
             </header>
             <div class="space-y-4">
                 <input type="email" id="email" placeholder="メールアドレス" class="w-full px-4 py-3 text-base bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 outline-none">
                 <input type="password" id="password" placeholder="パスワード" class="w-full px-4 py-3 text-base bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 outline-none">
-                <button id="loginBtn" class="btn w-full px-4 py-3 font-semibold text-white bg-indigo-600 rounded-lg hover:bg-indigo-700">ログイン</button>
+                <button id="loginBtn" class="btn w-full px-4 py-3 font-semibold text-white bg-indigo-600 rounded-lg hover:bg-indigo-700">メールアドレスでログイン</button>
+                <div class="text-center">
+                    <a href="signup.html" class="text-sm text-gray-600 hover:text-indigo-600 hover:underline">メールアドレスで新規登録の方はこちら</a>
+                </div>
                 <div class="relative flex py-2 items-center">
                     <div class="flex-grow border-t border-gray-300"></div>
                     <span class="flex-shrink mx-4 text-gray-400">または</span>
@@ -31,11 +34,9 @@
                 </div>
                 <button id="googleLoginBtn" class="btn w-full flex items-center justify-center gap-2 px-6 py-3 font-semibold text-gray-700 bg-white border border-gray-300 rounded-lg hover:bg-gray-50">
                     <svg class="w-5 h-5" viewBox="0 0 48 48"><path fill="#FFC107" d="M43.611 20.083H42V20H24v8h11.303c-1.649 4.657-6.08 8-11.303 8c-6.627 0-12-5.373-12-12s5.373-12 12-12c3.059 0 5.842 1.154 7.961 3.039L38.802 9.92C34.553 6.08 29.613 4 24 4C12.955 4 4 12.955 4 24s8.955 20 20 20s20-8.955 20-20c0-1.341-.138-2.65-.389-3.917z"></path><path fill="#FF3D00" d="M6.306 14.691l6.571 4.819C14.655 15.108 18.961 12 24 12c3.059 0 5.842 1.154 7.961 3.039l5.841-5.841C34.553 6.08 29.613 4 24 4C16.318 4 9.656 8.337 6.306 14.691z"></path><path fill="#4CAF50" d="M24 44c5.166 0 9.86-1.977 13.409-5.192l-6.19-5.238C29.211 35.091 26.715 36 24 36c-5.202 0-9.619-3.317-11.283-7.946l-6.522 5.025C9.505 39.556 16.227 44 24 44z"></path><path fill="#1976D2" d="M43.611 20.083H24v8h11.303c-.792 2.237-2.231 4.166-4.087 5.571l6.19 5.238C42.012 36.49 44 30.686 44 24c0-1.341-.138-2.65-.389-3.917z"></path></svg>
-                    Googleでログイン
+                    Googleで続ける
                 </button>
-                <div class="text-center pt-4">
-                    <a href="signup.html" class="text-sm text-indigo-600 hover:underline">アカウントをお持ちでないですか？ 新規登録</a>
-                </div>
+                <p class="text-xs text-gray-500 text-center -mt-2">初めての方もこちらから登録できます。</p>
             </div>
              <div id="login-error" class="pt-2 text-center text-red-600 font-medium h-8"></div>
         </div>
