ストレージの修正

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
-    <!-- Add Japanese font for jsPDF from a reliable CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-font-mplus-1p-normal/1.0.0/mplus-1p-normal.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -125,7 +124,7 @@
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
             authDomain: "side-pocket-sl.firebaseapp.com",
             projectId: "side-pocket-sl",
-            storageBucket: "side-pocket-sl.appspot.com",
+            storageBucket: "side-pocket-sl.firebasestorage.app", // CORRECTED
             messagingSenderId: "887116583823",
             appId: "1:887116583823:web:5783488bd573f5be4bf1fa",
             measurementId: "G-QSBDN1TX68"
