--- a/public/login.html
+++ b/public/login.html
@@ -51,7 +51,7 @@
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
             authDomain: "side-pocket-sl.firebaseapp.com",
             projectId: "side-pocket-sl",
-            storageBucket: "side-pocket-sl.appspot.com",
+            storageBucket: "side-pocket-sl.firebasestorage.app", // CORRECTED
             messagingSenderId: "887116583823",
             appId: "1:887116583823:web:5783488bd573f5be4bf1fa",
             measurementId: "G-QSBDN1TX68"
