--- a/public/profile.html
+++ b/public/profile.html
@@ -50,7 +50,7 @@
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
             authDomain: "side-pocket-sl.firebaseapp.com",
             projectId: "side-pocket-sl",
-            storageBucket: "side-pocket-sl.appspot.com",
+            storageBucket: "side-pocket-sl.firebasestorage.app", // CORRECTED
             messagingSenderId: "887116583823",
             appId: "1:887116583823:web:5783488bd573f5be4bf1fa",
             measurementId: "G-QSBDN1TX68"
@@ -155,8 +155,6 @@
                     photoURL: photoURL
                 });
 
-                // *** ここを修正 ***
-                // setDocに { merge: true } を付けて、更新または新規作成を安全に行う
                 const userDocRef = doc(db, "users", currentUser.uid);
                 await setDoc(userDocRef, {
                     lastName: lastName,
