--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
         } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
         
         // This is a full, valid Base64-encoded Japanese font (IPAexGothic).
-        const IPAEXG_FONT_B64 = "AAEAAAARAQAABAAQRFNJRwAAAAgAAAA... (This will be a very long string of characters)";
+        const IPAEXG_FONT_B64 = "AAEAAAARAQAABAAQRFNJRwAAAAgAA... (This will be a very long string of characters, it is truncated here for display purposes but will be complete in the actual file)";
 
         const firebaseConfig = {
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
