--- a/public/login.html
+++ b/public/login.html
@@ -21,61 +21,72 @@
                 <p class="text-center text-gray-500 mt-2">ログインまたは新規登録</p>
             </header>
             <div class="space-y-4">
-                <input type="email" id="email" placeholder="メールアドレス" class="w-full px-4 py-3 text-base bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 outline-none">
-                <input type="password" id="password" placeholder="パスワード" class="w-full px-4 py-3 text-base bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 outline-none">
-                <button id="loginBtn" class="btn w-full px-4 py-3 font-semibold text-white bg-indigo-600 rounded-lg hover:bg-indigo-700">メールアドレスでログイン</button>
-                <div class="text-center">
-                    <a href="signup.html" class="text-sm text-gray-600 hover:text-indigo-600 hover:underline">メールアドレスで新規登録の方はこちら</a>
+                <div id="login-error" class="text-red-500 text-sm text-center"></div>
+                <form id="login-form" class="space-y-4">
+                    <input type="email" id="email" placeholder="メールアドレス" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <input type="password" id="password" placeholder="パスワード" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <button type="submit" class="w-full btn bg-blue-600 text-white font-bold py-3 rounded-lg hover:bg-blue-700">メールアドレスでログイン</button>
+                </form>
+                <div class="flex items-center justify-center my-4">
+                    <hr class="w-full border-gray-300">
+                    <span class="px-2 text-gray-500 bg-white">または</span>
+                    <hr class="w-full border-gray-300">
                 </div>
-                <div class="relative flex py-2 items-center">
-                    <div class="flex-grow border-t border-gray-300"></div>
-                    <span class="flex-shrink mx-4 text-gray-400">または</span>
-                    <div class="flex-grow border-t border-gray-300"></div>
-                </div>
-                <button id="googleLoginBtn" class="btn w-full flex items-center justify-center gap-2 px-6 py-3 font-semibold text-gray-700 bg-white border border-gray-300 rounded-lg hover:bg-gray-50">
-                    <svg class="w-5 h-5" viewBox="0 0 48 48"><path fill="#FFC107" d="M43.611 20.083H42V20H24v8h11.303c-1.649 4.657-6.08 8-11.303 8c-6.627 0-12-5.373-12-12s5.373-12 12-12c3.059 0 5.842 1.154 7.961 3.039L38.802 9.92C34.553 6.08 29.613 4 24 4C12.955 4 4 12.955 4 24s8.955 20 20 20s20-8.955 20-20c0-1.341-.138-2.65-.389-3.917z"></path><path fill="#FF3D00" d="M6.306 14.691l6.571 4.819C14.655 15.108 18.961 12 24 12c3.059 0 5.842 1.154 7.961 3.039l5.841-5.841C34.553 6.08 29.613 4 24 4C16.318 4 9.656 8.337 6.306 14.691z"></path><path fill="#4CAF50" d="M24 44c5.166 0 9.86-1.977 13.409-5.192l-6.19-5.238C29.211 35.091 26.715 36 24 36c-5.202 0-9.619-3.317-11.283-7.946l-6.522 5.025C9.505 39.556 16.227 44 24 44z"></path><path fill="#1976D2" d="M43.611 20.083H24v8h11.303c-.792 2.237-2.231 4.166-4.087 5.571l6.19 5.238C42.012 36.49 44 30.686 44 24c0-1.341-.138-2.65-.389-3.917z"></path></svg>
-                    Googleで続ける
+                <!-- ★★★ 変更点 ★★★ -->
+                <button id="googleLoginBtn" class="w-full btn bg-white border border-gray-300 text-gray-700 font-semibold py-3 rounded-lg hover:bg-gray-50 flex items-center justify-center gap-2">
+                    <svg class="w-5 h-5" viewBox="0 0 48 48"><path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path><path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path><path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path><path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path><path fill="none" d="M0 0h48v48H0z"></path></svg>
+                    Googleでログイン / 連携
                 </button>
-                <p class="text-xs text-gray-500 text-center -mt-2">初めての方もこちらから登録できます。</p>
+                <p class="text-center text-sm text-gray-600">
+                    アカウントをお持ちでないですか？ <a href="signup.html" class="font-semibold text-blue-600 hover:underline">新規登録</a>
+                </p>
             </div>
-             <div id="login-error" class="pt-2 text-center text-red-600 font-medium h-8"></div>
         </div>
     </div>
 
+    <!-- Firebase SDK -->
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-        import { getAuth, onAuthStateChanged, GoogleAuthProvider, signInWithPopup, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore, doc, getDoc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // Firebase設定。storageBucketを統一します。
+        // あなたのFirebaseプロジェクトの設定情報に置き換えてください
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
             authDomain: "side-pocket-sl.firebaseapp.com",
             projectId: "side-pocket-sl",
-            storageBucket: "side-pocket-sl.appspot.com", // 統一されたstorageBucket
+            storageBucket: "side-pocket-sl.firebasestorage.app",
             messagingSenderId: "887116583823",
             appId: "1:887116583823:web:5783488bd573f5be4bf1fa",
-            measurementId: "G-QSBDN1TX68"
-        };
+              measurementId: "G-QSBDN1TX68"
+            }; // セキュリティのためエンコード
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
         const provider = new GoogleAuthProvider();
+        
+        // ★★★ 変更点 ★★★
+        // Googleログイン時にカレンダーの読み書き権限を要求するスコープを追加
+        provider.addScope('https://www.googleapis.com/auth/calendar');
 
-        // ログイン状態をチェック
+        // ログイン状態を監視
         onAuthStateChanged(auth, (user) => {
             if (user) {
-                // ログイン済みの場合はメインページへリダイレクト
+                // ログイン済みならメインページへリダイレクト
                 window.location.href = 'index.html';
             }
         });
 
-        // メール/パスワードでのログイン
-        document.getElementById('loginBtn').addEventListener('click', async () => {
+        // メールでのログイン
+        document.getElementById('login-form').addEventListener('submit', async (e) => {
+            e.preventDefault();
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
             const errorDiv = document.getElementById('login-error');
+            errorDiv.textContent = '';
+
             try {
                 await signInWithEmailAndPassword(auth, email, password);
                 // onAuthStateChangedがリダイレクトを処理
@@ -90,9 +101,10 @@
             try {
                 const result = await signInWithPopup(auth, provider);
                 const user = result.user;
+                
+                // Firestoreにユーザー情報がなければ作成
                 const userDocRef = doc(db, "users", user.uid);
                 const userDoc = await getDoc(userDocRef);
-                // もしユーザー情報がなければ作成
                 if (!userDoc.exists()) {
                     const nameParts = user.displayName ? user.displayName.split(' ') : ['', ''];
                     await setDoc(userDocRef, {
