--- a/public/login.html
+++ b/public/login.html
@@ -7,9 +7,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
+        :root {
+            --main-color: #698966;
+            --main-color-dark: #5a7d58;
+        }
         body { font-family: 'Noto Sans JP', sans-serif; }
         .btn { transition: all 0.2s ease-in-out; }
         .btn:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
+        .bg-main { background-color: var(--main-color); }
+        .hover\:bg-main-dark:hover { background-color: var(--main-color-dark); }
+        .text-main { color: var(--main-color); }
+        .ring-main:focus { ring-color: var(--main-color); }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
@@ -23,22 +31,22 @@
             <div class="space-y-4">
                 <div id="login-error" class="text-red-500 text-sm text-center"></div>
                 <form id="login-form" class="space-y-4">
-                    <input type="email" id="email" placeholder="メールアドレス" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    <input type="password" id="password" placeholder="パスワード" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    <button type="submit" class="w-full btn bg-blue-600 text-white font-bold py-3 rounded-lg hover:bg-blue-700">メールアドレスでログイン</button>
+                    <input type="email" id="email" placeholder="メールアドレス" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 ring-main">
+                    <input type="password" id="password" placeholder="パスワード" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 ring-main">
+                    <button type="submit" class="w-full btn bg-main text-white font-bold py-3 rounded-lg hover:bg-main-dark">メールアドレスでログイン</button>
                 </form>
                 <div class="flex items-center justify-center my-4">
                     <hr class="w-full border-gray-300">
-                    <span class="px-2 text-gray-500 bg-white">または</span>
+                    <!-- ★★★ 修正点 ★★★ -->
+                    <span class="px-2 text-xs text-gray-500 bg-white whitespace-nowrap">または</span>
                     <hr class="w-full border-gray-300">
                 </div>
-                <!-- ★★★ 変更点 ★★★ -->
                 <button id="googleLoginBtn" class="w-full btn bg-white border border-gray-300 text-gray-700 font-semibold py-3 rounded-lg hover:bg-gray-50 flex items-center justify-center gap-2">
                     <svg class="w-5 h-5" viewBox="0 0 48 48"><path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path><path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path><path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path><path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path><path fill="none" d="M0 0h48v48H0z"></path></svg>
                     Googleでログイン / 連携
                 </button>
                 <p class="text-center text-sm text-gray-600">
-                    アカウントをお持ちでないですか？ <a href="signup.html" class="font-semibold text-blue-600 hover:underline">新規登録</a>
+                    アカウントをお持ちでないですか？ <a href="signup.html" class="font-semibold text-main hover:underline">新規登録</a>
                 </p>
             </div>
         </div>
@@ -50,8 +58,6 @@
         import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, getDoc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // あなたのFirebaseプロジェクトの設定情報に置き換えてください
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
             apiKey: "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM",
             authDomain: "side-pocket-sl.firebaseapp.com",
@@ -59,27 +65,22 @@
             storageBucket: "side-pocket-sl.firebasestorage.app",
             messagingSenderId: "887116583823",
             appId: "1:887116583823:web:5783488bd573f5be4bf1fa",
-              measurementId: "G-QSBDN1TX68"
-            }; // セキュリティのためエンコード
+            measurementId: "G-QSBDN1TX68"
+        };
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
         const provider = new GoogleAuthProvider();
         
-        // ★★★ 変更点 ★★★
-        // Googleログイン時にカレンダーの読み書き権限を要求するスコープを追加
         provider.addScope('https://www.googleapis.com/auth/calendar');
 
-        // ログイン状態を監視
         onAuthStateChanged(auth, (user) => {
             if (user) {
-                // ログイン済みならメインページへリダイレクト
                 window.location.href = 'index.html';
             }
         });
 
-        // メールでのログイン
         document.getElementById('login-form').addEventListener('submit', async (e) => {
             e.preventDefault();
             const email = document.getElementById('email').value;
@@ -89,20 +90,16 @@
 
             try {
                 await signInWithEmailAndPassword(auth, email, password);
-                // onAuthStateChangedがリダイレクトを処理
             } catch (error) {
                 errorDiv.textContent = "ログインに失敗しました: " + error.message;
             }
         });
 
-        // Googleでのログイン
         document.getElementById('googleLoginBtn').addEventListener('click', async () => {
             const errorDiv = document.getElementById('login-error');
             try {
                 const result = await signInWithPopup(auth, provider);
                 const user = result.user;
-                
-                // Firestoreにユーザー情報がなければ作成
                 const userDocRef = doc(db, "users", user.uid);
                 const userDoc = await getDoc(userDocRef);
                 if (!userDoc.exists()) {
@@ -117,7 +114,6 @@
                         createdAt: serverTimestamp()
                     });
                 }
-                // onAuthStateChangedがリダイレクトを処理
             } catch (error) {
                 errorDiv.textContent = "Googleログインに失敗しました: " + error.message;
             }
